resources/css/list-mobile.css
* {
	-webkit-tap-highlight-color: rgba(0,0,0,0);
	-webkit-font-smoothing: antialiased;
}

body {
	margin: 0;
}

#master {
	width: 100%;
    overflow: hidden;
}

#container {
	width: 375px;
	position: relative;
}

#navigation {
	position: absolute;
	top: 0;
}

#header-image {
	max-width: 375px;
	position: relative;
	height: 375px;
	background-color: #F2F2F2;
	position: relative;
	overflow: hidden;
}

#header-image #map {
	height: 100%;
}

#header-image img {
	width: 375px;
}

#list {
	position: relative;
	padding-bottom: 100px;
	overflow: hidden;
}

a {
	text-decoration: none;
}

a:hover, a.hover, a:active {
	text-decoration: underline;
}

h1 {
	font-family: system, -apple-system, BlinkMacSystemFont, "Helvetica Neue", "Lucida Grande";
	font-weight: 700;
	font-size: 45px;
	color: black;
	margin: 20px 0 0 0;
    padding: 0 20px;
}

h1 a {
	color: black;
}


#category-breadcrumbs {
	font-family: system, -apple-system, BlinkMacSystemFont, "Helvetica Neue", "Lucida Grande";
	font-weight: 700;
	font-size: 24px;
	color: #1D2129;
	margin-top: 5px;
	margin-bottom: 20px;
    padding: 0 20px;
}

#category-breadcrumbs a {
	color: #1D2129;
}

.index-container {
	overflow: hidden;
	height: 50px;
	margin-top: 15px;
}

.index-wrapper {
    overflow-y: hidden;
    overflow-x: scroll;
    position: relative;
    width: 375px;
	height: 50px;
}

.index-header {
	margin-left: 20px;
}

.index {
	margin-top: 5px;
    padding: 0 20px;
	height: 24px;
}

.index .item {
	display: inline-block;
	margin-top: 2px;
	height: 22px;
	margin-right: 15px;
}

.index .item:last-child {
	margin-right: 0;
}

a.index-show-more {
    padding: 0 20px;
	display: inline-block;
}

.index .item a {
	font-family: system, -apple-system, BlinkMacSystemFont, "Helvetica Neue", "Lucida Grande";
	font-weight: 400;
	font-size: 18px;
	color: #90949C;
}

.index .item a:hover {
	text-decoration: none;
}

.index .item a:hover .label {
	text-decoration: underline;
}

.index .item a .count {
	color: #BEC2C9;
}

.search-container {
	overflow: hidden;
	height: 30px;
}

.search-wrapper {
    overflow-y: hidden;
    overflow-x: scroll;
    position: relative;
    width: 375px;
	height: 50px;
}

input#search.places-search {
	font-weight: 700;
	display: inline-block;
	width: 100px;
	padding: 0;
}

.search-separator {
	display: inline-block;
	color: #BEC2C9;
	font-weight: 400;
	width: 18px;
	text-align: center;
}

.search-separator.has-search-query {
	color: #000;
	font-weight: 700;
}

#search-suggestions {
	width: 90%;
}

#search-suggestions a.suggestion:last-child {
	margin-right: 0;
}

#empty-search-results {
	margin-left: 20px;
}

#places {
    padding: 40px 20px 0 20px;
}

.subcategory-places {
	margin-top: 50px;
}

.subcategory-places:first-of-type {
	margin-top: 0;
}

.subcategory-header {
	min-height: 10px;
}

.subcategory-header a {
	font-family: system, -apple-system, BlinkMacSystemFont, "Helvetica Neue", "Lucida Grande";
	font-weight: 400;
	font-size: 13px;
	color: #BEC2C9;
	letter-spacing: 1px;
	text-transform: uppercase;
}

.place {
	display: inline-block;
	margin-top: 20px;
	width: 100%;
}

.subcategory-places#none .place:first-of-type {
	margin-top: 0;
}

.place .place-image-wrapper {
    float: left;
    width: 70px;
	height: 70px;
    margin-right: 15px;
    border-radius: 4px;
	background-color: #F2F2F2;
	padding: 0;
	overflow: hidden;
}

.place .place-image-wrapper .place-image {
    width: 70px;
}

.place .place-info {
	height: 70px;
	display: table-cell;
    vertical-align: middle;
}

.place .place-info .title a {
	font-family: system, -apple-system, BlinkMacSystemFont, "Helvetica Neue", "Lucida Grande";
	font-weight: 400;
	font-size: 22px;
	color: #000000;
}

.place .place-info .description {
	font-family: system, -apple-system, BlinkMacSystemFont, "Helvetica Neue", "Lucida Grande";
	font-weight: 400;
	display: block;
	margin-top: 5px;
	color: #90949C;
	line-height: 20px;
}

.place .place-info .description .rating-circle {
	width: 6px;
	height: 6px;
	border-radius: 6px;
	display: inline-block;
	margin-right: 5px;
	vertical-align: 2px;
}

.place .place-info .description a {
	color: #90949C;
}

